# steoikothet

./: PROJECT_SUMMARY.md  Procfile  app.py  config.py  deploy.py  docker-compose.yml  index.html  migrate_db.py  production_app.py  pyproject.toml  start.bat  start_all.py  student_dashboard.html  student_detail.html  student_web_app.py  students.html  submit_test.html  teacher_dashboard.html  telegram_webapp.html  test_bot.py  utils.py  БЫСТРЫЙ_ДЕПЛОЙ.md  ДЕПЛОЙ_СЕЙЧАС.md  ИСПРАВЛЕНИЕ_URL.md  СТУДЕНЧЕСКОЕ_ВЕБ_ПРИЛОЖЕНИЕ.md  требования.txt
Бот кол во балов/: DEPLOYMENT.md  Dockerfile  INSTALL.md  PROJECT_SUMMARY.md  Procfile_deploy  QUICK_START.md  README.md  USAGE.md  app.py  bot.py  check_db.py  check_status.py  create_db.py  database.py  deploy_heroku.bat  deploy_setup.py  docker-compose.yml  feedback.py  force_reset_db.py  pyproject.toml  requirements.txt  requirements_web.txt  reset_database.py  reset_now.bat  run.py  simple_app.py  start.bat  start.sh  start_all.bat  start_student_web.py  start_web.py  stepik_bot.db  test_bot.py  test_render.py  test_web.py  utils.py  web_app.py  ДЕПЛОЙ_НА_СЕРВЕР.md  НАСТРОЙКА_И_ЗАПУСК.md  СБРОС_БАЗЫ_ДАННЫХ.md  (+1 more)
Бот кол во балов/templates/: base.html  evaluate_test.html  index.html  pending_tests.html  student_detail.html  students.html
Бот кол во балов/templates_student/: base.html  evaluate_test_teacher.html  my_results.html  pending_tests_teacher.html  register.html  students_list_teacher.html
